Increase visibility of array count Fix minItems remove button on arrays
Added minItems to MIDI 1 details arrays

--- a/src/css/brutusin-json-forms.css
+++ b/src/css/brutusin-json-forms.css
@@ -97,8 +97,8 @@ form.brutusin-form td.prop-value {
     text-align: left;
 }
 form.brutusin-form td.item-index{
-    font-size: 0.8em;
-    color: lightgray;
+    /*font-size: 0.8em;*/
+    /*color: lightgray;*/
     width: 25px;
     text-align: right;
 }
